fix spacing of nav and wrapper for tablet screen sizes

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,16 @@
     padding-right: 4rem;
   }
 
+  @include tablet-medium {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  @include tablet-large {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
   @include desktop-small {
     padding-left: 5rem;
     padding-right: 5rem;
