--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,10 +11,9 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 1.6rem;
-  padding-bottom: 1.6rem;
   padding-left: 1.6rem;
   padding-right: 1.6rem;
+  height: 8rem;
   border-bottom: 1px solid $grey;
   position: relative;
   z-index: 99;
@@ -29,6 +28,16 @@ body {
     justify-content: center;
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+
+  @include tablet-medium {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  @include tablet-large {
+    padding-left: 10rem;
+    padding-right: 10rem;
   }
 
   @include desktop-small {
@@ -70,13 +79,25 @@ body {
       max-width: 100%;
       flex-grow: 1;
       max-width: 1000px;
+
+      @include tablet-medium {
+        min-width: 100%;
+        justify-content: space-between;
+      }
     }
 
     &__list-item {
+      color: $grey;
       @include t-p1;
       text-transform: uppercase;
       flex-grow: 0.5;
-      max-width: 60px;
+
+      @include tablet-medium {
+        font-size: 1.8rem;
+
+        letter-spacing: 0.3rem;
+        width: 100%;
+      }
       @include desktop-small {
         margin: 0;
         @include d-p1;
@@ -85,7 +106,12 @@ body {
 
     &__title {
       text-align: center;
-      margin-bottom: 2rem;
+
+      @include tablet-medium {
+        font-size: 3.5rem;
+        padding-bottom: 1rem;
+      }
+
       @include desktop-small {
         margin: 0;
       }
@@ -94,6 +120,14 @@ body {
     &__larger-wrapper {
       padding-top: 2rem;
       padding-bottom: 2rem;
+
+      @include tablet-small {
+        height: auto;
+      }
+
+      @include tablet-medium {
+        width: 100%;
+      }
 
       @include desktop-small {
         display: flex;
